--- a/index.html
+++ b/index.html
@@ -22,6 +22,93 @@
             </button>
         </form>
     </div>
+    <div class="register-form">
+        <form action="">
+            <label for="">
+                Campo de texto
+            </label>
+            <input type="text" maxlength="5"  minlength="3">
+            <label for="">
+                Campo de número
+            </label>
+            <input type="number">
+            <label for="">
+                Campo de email
+            </label>
+            <input type="email" id="input-email">
+            <label for="">
+                Campo de senha
+            </label>
+            <input type="password">
+            <label for="">
+                Campo de data
+            </label>
+            <input type="date">
+            <label for="">
+                Campo de upload
+            </label>
+            <input type="file" accept="application/pdf">
+            <label for="">
+                Area de texto
+            </label>
+            <textarea maxlength="5" ></textarea>
+            <label for="">
+                Selecione uma opção
+            </label>
+            <select name="select" required>
+                <option value="">
+                    Selecione uma opção
+                </option>
+                <option value="Linguagem-html">
+                    HTML
+                </option>
+                <option value="2">
+                    CSS
+                </option>
+                <option value="3">
+                    Javascript
+                </option>
+            </select>
+            <h4>
+                Selecione mais de uma opção
+            </h4>
+            <div class="input-inline">
+                <input type="checkbox" name="check1" value="HTML" id="item-html">
+                <label for="item-html">
+                    HTML
+                </label>
+                <input type="checkbox" name="check2" name="CSS" id="item-css">
+                <label for="item-css">
+                    CSS
+                </label>
+                <input type="checkbox" name="check3" value="Javascript" id="item-javascript">
+                <label for="item-javascript">
+                    Javascript
+                </label>
+            </div>
+            <h4>
+                Selecione mais de uma opção
+            </h4>
+            <div class="input-inline">
+                <input type="radio" name="radio" value="HTML" id="radio" required>
+                <label for="radio-html">
+                    HTML
+                </label>
+                <input type="radio" name="radio" name="CSS" id="radio-css">
+                <label for="radio-css">
+                    CSS
+                </label>
+                <input type="radio" name="radio" value="Javascript" id="radio-javascript">
+                <label for="radio-javascript">
+                    Javascript
+                </label>
+            </div>
+                <br>
+                <button>
+                Enviar
+            </button>
+        </form>
+    </div>
 </body>
 
 </html>
